@@ -30,6 +30,7 @@
 	- selinux: ignore ENOTSUP return from lsetfilecon.
 	- add sparcv8 and enable elf32/elf64 Zon sparc64 (#117302).
 	- fix: --querybynumber looped.
+	- fix: ENOTSUP filter from lsetfilecon borkage.
   
 4.2.1 -> 4.2.2:
 	- unify signal handling in librpmio, use condvar to deliver signal.
